--- a/index.html
+++ b/index.html
@@ -5,9 +5,36 @@
         <meta name="description" content="This is the intro page for CSC3110E12">
         <meta name="keywords" content="Hello,introduction,basics">
         <link href="css/styles.css" rel="stylesheet">
+        <style>
+            header {
+                background-color: beige;
+            }
 
+            h1{ 
+                border:2px black solid !important;
+            }
+            .title{
+                color: rgb(28, 97, 157);
+                border: 0 none;
+            }
+
+            #intro_paragraph{
+                color:rgb(180, 217, 252);
+            }
+
+        </style>
     </head>
     <body>
-        Hello world.
+        <!-- TODO: Put banner here-->
+        <header >
+            <h1 class="title">Ryan Steffes</h1>
+            <p id="intro_paragraph">This is exciting and interesting information about me, who is awesome</p>
+        </header>
+        <h1>Resume</h1>
+        <!-- TODO: Add navigation -->
+        <!-- TODO: Put Main-->
+        <!-- TODO: Column 1-->
+        <!-- TODO: Column 2-->
+        <!-- TODO: Column 3-->
     </body>
 </html>
