--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
                 color:rgb(180, 217, 252);
             }
 
+            a{
+                display: block;
+                height:2em;
+                width:10em;
+                background-color: darkgrey;
+                color:black;
+            }
+
         </style>
     </head>
     <body>
@@ -29,10 +37,29 @@
         <header >
             <h1 class="title">Ryan Steffes</h1>
             <p id="intro_paragraph">This is exciting and interesting information about me, who is awesome</p>
+            <nav>
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                <a href="#">Link 4</a>
+            </nav>
         </header>
         <h1>Resume</h1>
         <!-- TODO: Add navigation -->
         <!-- TODO: Put Main-->
+        <table>
+            <tr>
+                <th>Heading 1</th> 
+                <th>Heading 2</th>
+            </tr>
+            <tr>
+                <td>Item 1</td> 
+                <td>Item 2</td>
+            </tr>
+            <tr>
+                <td>Item 3</td> 
+                <td>Item 4</td>
+            </tr>
         <!-- TODO: Column 1-->
         <!-- TODO: Column 2-->
         <!-- TODO: Column 3-->
