--- a/JS_Class_3.html
+++ b/JS_Class_3.html
@@ -14,8 +14,6 @@
 
             function add(x, y)
             {
-                x = 1;
-                y = 2;
                 return x + y;
             }
 
@@ -26,6 +24,8 @@
 
             alert( add(x, y) ); // alert ( 3 )
 
+            var three = add( 1, 2);
+            
             alert( x ); // 10
 
             changeX();
